--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -50,8 +50,8 @@
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:background="@drawable/btn_on"
-        android:textColor="@color/titlecolor"
-        android:text="@string/login"/>
+        android:text="@string/login"
+        android:textColor="@color/titlecolor" />
 
     <LinearLayout
         android:layout_width="wrap_content"
