--- a/app/src/main/res/layout/complain_modify.xml
+++ b/app/src/main/res/layout/complain_modify.xml
@@ -83,10 +83,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <Button
+            android:id="@+id/btnPhotoLoad"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="사진첨부"/>
+            android:text="사진첨부" />
 
         <TextView
             android:id="@+id/cpmfilename"
