커뮤니티 그리드뷰로 전환 로그인 회원가입 비밀번호 별표처리 clientDTO삭제

--- a/app/src/main/res/layout/join_main.xml
+++ b/app/src/main/res/layout/join_main.xml
@@ -105,7 +105,8 @@
                 android:id="@+id/joinPw"
                 android:layout_width="250dp"
                 android:layout_height="50dp"
-                android:textSize="@dimen/contentSize"/>
+                android:textSize="@dimen/contentSize"
+                android:inputType="textPassword" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -122,7 +123,8 @@
                 android:id="@+id/joinPwr"
                 android:layout_width="250dp"
                 android:layout_height="50dp"
-                android:textSize="@dimen/contentSize"/>
+                android:textSize="@dimen/contentSize"
+                android:inputType="textPassword" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
