--- a/app/src/main/res/layout/community_list_view.xml
+++ b/app/src/main/res/layout/community_list_view.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="10dp">
+    <ImageView
         android:id="@+id/cmtitle"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_width="100dp"
+        android:layout_height="120dp"
         android:text="예시입니다"
         android:padding="10dp"
-        android:textStyle="bold"/>
+        android:src="@drawable/com_facebook_profile_picture_blank_portrait" />
     <TextView
         android:id="@+id/cmwriter"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="40dp"
         android:text="예시입니다"
         android:padding="10dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:gravity="center"/>
 
 </LinearLayout>
