--- a/app/src/main/res/layout/community_main.xml
+++ b/app/src/main/res/layout/community_main.xml
@@ -5,10 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/cmlist_view"
+    <GridView
+        android:id="@+id/grid_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:listSelector="@android:color/holo_blue_light"
+        android:horizontalSpacing="8dp"
+        android:verticalSpacing="8dp"
+        android:layout_margin="8dp"
+        android:numColumns="3"/>
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/communityPlus"
@@ -22,5 +28,7 @@
         android:layout_marginRight="18dp"
         android:layout_marginBottom="11dp"
         android:src="@drawable/plus" />
+
+
 
 </RelativeLayout>
