--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -39,9 +39,9 @@
         android:layout_marginRight="50dp"
         android:ems="10"
         android:hint="비밀번호"
+        android:inputType="textPassword"
         android:textColorHint="@color/black"
-        android:textSize="12sp"
-        android:inputType="textPersonName" />
+        android:textSize="12sp" />
 
     <Button
         android:id="@+id/loginMenuBtn"
