--- a/app/src/main/res/layout/community_insert.xml
+++ b/app/src/main/res/layout/community_insert.xml
@@ -68,30 +68,40 @@
             android:text="내용 "/>
 
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="400dp">
 
-        <EditText
-            android:id="@+id/cmicontent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            style="@style/content"
-            android:gravity="top"
-            android:hint="내용을 입력하세요"
-            android:inputType="textMultiLine" />
-    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/cmiImageView"
+            android:layout_width="match_parent"
+            android:layout_height="200dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp">
+
+        <EditText
+            android:id="@+id/cmicontent"
+            style="@style/content"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:gravity="top"
+            android:hint="내용을 입력하세요"
+            android:inputType="textMultiLine" />
+
+    </LinearLayout>
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
         <Button
+            android:id="@+id/cmiPhotonLoad"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="사진첨부"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="파일이름"/>
+            android:text="사진첨부" />
 
     </LinearLayout>
 
