--- a/app/src/main/res/layout/login_menu.xml
+++ b/app/src/main/res/layout/login_menu.xml
@@ -46,7 +46,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginRight="20dp"
+            android:visibility="gone"/>
 
         <Button
             android:id="@+id/fake_kakao"
