--- a/app/src/main/res/layout/login_menu.xml
+++ b/app/src/main/res/layout/login_menu.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/allbackg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -44,10 +45,10 @@
             android:id="@+id/com_kakao_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:visibility="gone"/>
+            android:layout_marginBottom="30dp"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/fake_kakao"
