--- a/app/src/main/res/layout/main_fragment1.xml
+++ b/app/src/main/res/layout/main_fragment1.xml
@@ -10,109 +10,159 @@
         android:id="@+id/main_weather"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="30"
+        android:layout_weight="40"
         android:orientation="horizontal"
         android:weightSum="6">
-        <LinearLayout
-            android:id="@+id/weather_pic_text"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:orientation="vertical">
-            <ImageView
-                android:id="@+id/weather_pic"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:src="@drawable/ex_sun"
-                android:padding="20dp"/>
-
-            <TextView
-                android:id="@+id/weather_text"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:text="위치"/>
-
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/tfu"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:weightSum="3"
-            >
-            <TextView
-                android:id="@+id/airtemp"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center|left"
-                android:text="기온" />
-            <TextView
-                android:id="@+id/finedust"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="미세먼지"
-                android:gravity="center|left"/>
-            <TextView
-                android:id="@+id/ultrafinedust"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="초미세먼지"
-                android:gravity="center|left"/>
-        </LinearLayout>
-        
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:orientation="vertical"
-            android:weightSum="3">
-
-            <TextView
-                android:id="@+id/setTemperatures"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="현재 기온"
-                android:gravity="center|left"/>
-
-            <TextView
-                android:id="@+id/setFinedust"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="현재 미세먼지"
-                android:gravity="center|left"/>
-
-            <TextView
-                android:id="@+id/setUltrafinedust"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="현재 초미세먼지"
-                android:gravity="center|left"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="10">
-        <Button
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+        <ImageView
+            android:id="@+id/weather_back"
+            android:scaleType="fitXY"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/btn_on"
-            android:textColor="@color/allbackg"
-            android:layout_marginRight="10dp"
-            style="@style/subTitleText"
+            android:src="@drawable/manycloud" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#70ffffff"/>
 
-            android:text="우리집 등록 버튼"/>
+        <!-- 제일 큰화면 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center">
+            <!-- 미세먼지 제외 부분 -->
+            <LinearLayout
+                android:layout_marginTop="15dp"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="5"
+                >
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="100dp"
+                    android:orientation="vertical"
+                    android:layout_weight="1.3"
+                    android:weightSum="10">
+                    <ImageView
+                        android:id="@+id/weather_icon"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="8"/>
+                    <TextView
+                        android:id="@+id/weather_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="2"
+                        android:text="맑음"
+                        android:textColor="#000000"
+                        android:textStyle="bold"
+                        android:gravity="center"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1.5"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/nowtemp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="23℃"
+                        android:layout_gravity="center"
+                        android:textColor="#000000"
+                        android:textSize="40sp"
+                        android:layout_marginTop="20dp"/>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="3dp"
+                        android:layout_gravity="center">
+
+                        <TextView
+                            android:id="@+id/tmn"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="10sp"
+                            android:textColor="#000000"
+                            android:gravity="center"
+                            android:text="00℃"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="10sp"
+                            android:textColor="#000000"
+                            android:text=" / "/>
+                        <TextView
+                            android:id="@+id/tmx"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:textColor="#000000"
+                            android:textSize="10sp"
+                            android:text="00℃"/>
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <!-- 미세먼지 부분 -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="미세먼지"
+                    android:textSize="10sp"
+                    android:layout_gravity="center"
+                    android:textColor="#000000"/>
+                <ImageView
+                    android:id="@+id/finedust"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/soso"
+                    android:padding="1dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="초미세먼지"
+                    android:textSize="10sp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center"
+                    android:textColor="#000000"/>
+                <ImageView
+                    android:id="@+id/ufinedust"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/soso"
+                    android:padding="1dp"/>
+            </LinearLayout>
+            <Button
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#9082baff"
+                android:textColor="@color/allbackg"
+                android:layout_marginRight="10dp"
+                android:padding="5dp"
+                style="@style/subTitleText"
+                android:fontFamily="@font/humyfriends"
+                android:text="우리집 등록 하기"/>
+        </LinearLayout>
+
+    </FrameLayout>
 
     </LinearLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
