--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
@@ -20,7 +21,8 @@
 
     <item
         android:id="@+id/adminmenu"
-        android:title="@string/menu_admin">
+        android:title="@string/menu_admin"
+        android:visible="false">
         <menu>
             <item
                 android:id="@+id/nav_list"
