--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,7 +22,7 @@
     <item
         android:id="@+id/adminmenu"
         android:title="@string/menu_admin"
-        android:visible="false">
+        android:visible="true">
         <menu>
             <item
                 android:id="@+id/nav_list"
