--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,6 +17,9 @@
         <item
             android:id="@+id/nav_settings"
             android:title="@string/menu_settings" />
+        <item
+            android:id="@+id/nav_logout"
+            android:title="@string/menu_logout" />
     </group>
 
     <item
