미세먼지 api적용

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,7 +26,7 @@
     <style name="titlebartext">
         <item name="android:textColor">@color/titlecolor</item>
         <item name="android:textSize">@dimen/titlesize</item>
-        <item name="android:fontFamily">@font/huseoulcontrychicken</item>
+        <item name="android:fontFamily">@font/humaskingtape</item>
         <item name="android:scaleX">1.5</item>
 
     </style>
