--- a/app/src/main/res/layout/main_fragment1.xml
+++ b/app/src/main/res/layout/main_fragment1.xml
@@ -117,27 +117,56 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center">
-                <TextView
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="미세먼지"
-                    android:textSize="10sp"
-                    android:layout_gravity="center"
-                    android:textColor="#000000"/>
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|top"
+                        android:text="미세먼지"
+                        android:textColor="#000000"
+                        android:textSize="8sp" />
+                    <TextView
+                        android:id="@+id/dvalue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="00"
+                        android:textColor="#000000"
+                        android:layout_gravity="center"
+                        android:textSize="8sp"
+                        />
+                </LinearLayout>
                 <ImageView
                     android:id="@+id/finedust"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/soso"
                     android:padding="1dp"/>
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="초미세먼지"
-                    android:textSize="10sp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_gravity="center"
-                    android:textColor="#000000"/>
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|top"
+                        android:layout_marginLeft="10dp"
+                        android:text="초미세먼지"
+                        android:textColor="#000000"
+                        android:textSize="8sp" />
+                    <TextView
+                        android:id="@+id/udvalue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="00"
+                        android:textColor="#000000"
+                        android:layout_gravity="center"
+                        android:textSize="8sp"
+                        />
+                </LinearLayout>
                 <ImageView
                     android:id="@+id/ufinedust"
                     android:layout_width="30dp"
