--- a/app/src/main/res/layout/settings_main.xml
+++ b/app/src/main/res/layout/settings_main.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/memberModify"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="회원정보수정"
+        tools:layout_editor_absoluteX="154dp"
+        tools:layout_editor_absoluteY="141dp" />
 
     <TextView
         android:id="@+id/textView7"
@@ -12,4 +21,4 @@
         android:text="@string/menu_settings"
         tools:layout_editor_absoluteX="154dp"
         tools:layout_editor_absoluteY="141dp" />
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
