--- a/app/src/main/res/layout/activity_member_modify.xml
+++ b/app/src/main/res/layout/activity_member_modify.xml
@@ -36,11 +36,25 @@
             android:layout_width="90dp"
             android:layout_height="90dp" />
 
-        <Button
-            android:id="@+id/modify_photoLoad"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="사진첨부"/>
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/modify_photoLoad"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="사진첨부"/>
+
+            <Button
+                android:id="@+id/modify_photoDelete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="사진삭제"/>
+
+        </LinearLayout>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -71,7 +85,8 @@
             <EditText
                 android:id="@+id/modify_pw"
                 android:layout_width="200dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"/>
 
         </LinearLayout>
 
@@ -88,7 +103,8 @@
             <EditText
                 android:id="@+id/modify_change_pw"
                 android:layout_width="200dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"/>
 
         </LinearLayout>
 
@@ -105,7 +121,8 @@
             <EditText
                 android:id="@+id/modify_check_pw"
                 android:layout_width="200dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"/>
 
         </LinearLayout>
 
