--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="titlecolor">#ffffff</color>
     <color name="titlebarcolor">#104aa8</color>
 
-    <color name="allbackg">#f0f0f0</color>
+    <color name="allbackg">#F0F0F0</color>
     <color name="onBtnColor">#82baff</color>
     <color name="offBtnColor">#4d4d4d</color>
     <color name="black">#000000</color>
