--- a/app/src/main/res/layout/community_insert.xml
+++ b/app/src/main/res/layout/community_insert.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -73,6 +72,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <ImageView
             android:id="@+id/cmiImageView"
             android:layout_width="match_parent"
@@ -96,13 +96,20 @@
     
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/cmiPhotonLoad"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="사진첨부" />
+
+        <Button
+            android:id="@+id/btnPhotoDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="사진삭제" />
 
     </LinearLayout>
 
