--- a/app/src/main/res/layout/community_modify.xml
+++ b/app/src/main/res/layout/community_modify.xml
@@ -99,6 +99,12 @@
             android:layout_height="wrap_content"
             android:text="사진첨부" />
 
+        <Button
+            android:id="@+id/btnPhotoDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="사진삭제" />
+
     </LinearLayout>
 
 
