--- a/app/src/main/res/layout/complain_modify.xml
+++ b/app/src/main/res/layout/complain_modify.xml
@@ -67,15 +67,16 @@
             android:text="내용 "/>
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp">
+        android:layout_height="300dp">
 
         <EditText
             android:id="@+id/cpmcontent"
+            style="@style/content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            style="@style/content"
             android:gravity="top"
             android:hint="내용을 입력하세요"
             android:inputType="textMultiLine" />
@@ -95,6 +96,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="파일이름" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btnPhotoDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="사진삭제" />
 
     </LinearLayout>
 
