--- a/app/src/main/res/layout/login_search_id.xml
+++ b/app/src/main/res/layout/login_search_id.xml
@@ -6,13 +6,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp">
+        android:layout_height="30dp"
+        android:layout_marginTop="20dp">
         <Button
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@drawable/back"
-            android:layout_marginLeft="10dp"
-            />
+            android:layout_marginLeft="10dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -22,9 +22,58 @@
     </LinearLayout>
 
     <TextView
-        android:layout_width="200dp"
+        android:layout_width="210dp"
         android:layout_height="wrap_content"
-        android:text="@string/search_id"
         android:layout_gravity="center"
-        android:layout_marginTop="80dp"/>
+        android:layout_marginTop="80dp"
+        android:gravity="center"
+        android:text="@string/search_id" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="20dp">
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/titlebarcolor"
+            android:text="이름"
+            android:textSize="@dimen/contentSize"/>
+        <EditText
+            android:id="@+id/joinName"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:textSize="@dimen/contentSize"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/titlebarcolor"
+            android:text="이메일"
+            android:textSize="@dimen/contentSize"
+            android:layout_marginTop="20dp"/>
+        <EditText
+            android:id="@+id/joinEmail"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:textSize="@dimen/contentSize"/>
+    </LinearLayout>
+    <Button
+        android:id="@+id/realJoin"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
+        android:layout_gravity="center"
+        android:background="@drawable/btn_on"
+        android:text="조회하기"
+        android:textSize="@dimen/btnSize"
+        android:textColor="#ffffff" />
+
 </LinearLayout>
