gps값에 따른 날씨 미세먼지 적용

--- a/app/src/main/res/layout/login_main.xml
+++ b/app/src/main/res/layout/login_main.xml
@@ -3,29 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/allbackg"
     tools:context=".login.Login"
     android:orientation="vertical">
 
-
-    <me.relex.circleindicator.CircleIndicator
-        android:id="@+id/loginIndicator"
-        app:ci_drawable="@drawable/black_radius"
-        app:ci_height="7dp"
-        app:ci_width="7dp"
-        app:ci_margin="4dp"
+    <ImageView
+        android:id="@+id/main_img"
         android:layout_width="match_parent"
-        android:background="@color/titlebarcolor"
-        android:layout_height="35dp"/>
-
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/loginVp"
-        android:layout_width="200dp"
         android:layout_height="300dp"
         android:layout_gravity="center"
-        android:layout_marginTop="40dp"/>
+        android:layout_marginTop="70dp"
+        android:src="@drawable/home_img"/>
 
     <LinearLayout
         android:layout_width="match_parent"
