--- a/app/src/main/res/layout/main_fragment1.xml
+++ b/app/src/main/res/layout/main_fragment1.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="100">
+    <TextView
+        android:id="@+id/hide_lat_msg"
+        android:layout_width="0dp"
+        android:layout_height="0dp" />
+    <TextView
+        android:id="@+id/hide_lon_msg"
+        android:layout_width="0dp"
+        android:layout_height="0dp" />
 
     <LinearLayout
         android:id="@+id/main_weather"
@@ -13,189 +20,227 @@
         android:layout_weight="40"
         android:orientation="horizontal"
         android:weightSum="6">
-    <FrameLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-        <ImageView
-            android:id="@+id/weather_back"
-            android:scaleType="fitXY"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/manycloud" />
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#70ffffff"/>
 
-        <!-- 제일 큰화면 -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
-            <!-- 미세먼지 제외 부분 -->
-            <LinearLayout
-                android:layout_marginTop="15dp"
-                android:gravity="center"
+        <FrameLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <Button
+                android:id="@+id/gps_btn"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="right"
+                android:background="@drawable/gps_btn" />
+
+            <ImageView
+                android:id="@+id/weather_back"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="5"
-                >
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/manycloud" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#70ffffff" />
+
+            <!-- 제일 큰화면 -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center|top"
+                android:orientation="vertical">
+                <!-- 미세먼지 제외 부분 -->
                 <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:orientation="vertical"
-                    android:layout_weight="1.3"
-                    android:weightSum="10">
-                    <ImageView
-                        android:id="@+id/weather_icon"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="8"/>
-                    <TextView
-                        android:id="@+id/weather_title"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="2"
-                        android:text="맑음"
-                        android:textColor="#000000"
-                        android:textStyle="bold"
-                        android:gravity="center"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1.5"
-                    android:orientation="vertical">
-                    <TextView
-                        android:id="@+id/nowtemp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="23℃"
-                        android:layout_gravity="center"
-                        android:textColor="#000000"
-                        android:textSize="40sp"
-                        android:layout_marginTop="20dp"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:weightSum="5">
+
                     <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="3dp"
-                        android:layout_gravity="center">
+                        android:layout_width="0dp"
+                        android:layout_height="100dp"
+                        android:layout_weight="1.3"
+                        android:orientation="vertical"
+                        android:weightSum="10">
+
+                        <ImageView
+                            android:id="@+id/weather_icon"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="8" />
 
                         <TextView
-                            android:id="@+id/tmn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="10sp"
-                            android:textColor="#000000"
+                            android:id="@+id/weather_title"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="2"
                             android:gravity="center"
-                            android:text="00℃"/>
+                            android:text="맑음"
+                            android:textColor="#000000"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1.5"
+                        android:orientation="vertical">
+
                         <TextView
+                            android:id="@+id/nowtemp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="10sp"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="20dp"
+                            android:text="23℃"
                             android:textColor="#000000"
-                            android:text=" / "/>
-                        <TextView
-                            android:id="@+id/tmx"
+                            android:textSize="40sp" />
+
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:textColor="#000000"
-                            android:textSize="10sp"
-                            android:text="00℃"/>
+                            android:layout_gravity="center"
+                            android:layout_marginTop="3dp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/tmn"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:text="00℃"
+                                android:textColor="#000000"
+                                android:textSize="10sp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text=" / "
+                                android:textColor="#000000"
+                                android:textSize="10sp" />
+
+                            <TextView
+                                android:id="@+id/tmx"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:text="00℃"
+                                android:textColor="#000000"
+                                android:textSize="10sp" />
+                        </LinearLayout>
+
                     </LinearLayout>
 
                 </LinearLayout>
 
+                <!-- 미세먼지 부분 -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="미세\n먼지"
+                            android:textColor="#000000"
+                            android:textSize="8sp" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/dvalue"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:text="00"
+                                android:textColor="#000000"
+                                android:textSize="8sp" />
+
+                            <ImageView
+                                android:id="@+id/finedust"
+                                android:layout_width="30dp"
+                                android:layout_height="15dp"
+                                android:padding="1dp"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/soso" />
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="10dp"
+                            android:gravity="center"
+                            android:text="초미세\n먼지"
+                            android:textColor="#000000"
+                            android:textSize="8sp" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/udvalue"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:text="00"
+                                android:textColor="#000000"
+                                android:textSize="8sp" />
+
+                            <ImageView
+                                android:id="@+id/ufinedust"
+                                android:layout_width="30dp"
+                                android:layout_height="15dp"
+                                android:padding="1dp"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/soso" />
+                        </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
+
             </LinearLayout>
 
-            <!-- 미세먼지 부분 -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center|top"
-                        android:text="미세먼지"
-                        android:textColor="#000000"
-                        android:textSize="8sp" />
-                    <TextView
-                        android:id="@+id/dvalue"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="00"
-                        android:textColor="#000000"
-                        android:layout_gravity="center"
-                        android:textSize="8sp"
-                        />
-                </LinearLayout>
-                <ImageView
-                    android:id="@+id/finedust"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/soso"
-                    android:padding="1dp"/>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center|top"
-                        android:layout_marginLeft="10dp"
-                        android:text="초미세먼지"
-                        android:textColor="#000000"
-                        android:textSize="8sp" />
-                    <TextView
-                        android:id="@+id/udvalue"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="00"
-                        android:textColor="#000000"
-                        android:layout_gravity="center"
-                        android:textSize="8sp"
-                        />
-                </LinearLayout>
-                <ImageView
-                    android:id="@+id/ufinedust"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/soso"
-                    android:padding="1dp"/>
-            </LinearLayout>
             <Button
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="10dp"
+                style="@style/subTitleText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="10dp"
                 android:background="#9082baff"
-                android:textColor="@color/allbackg"
-                android:layout_marginRight="10dp"
-                android:padding="5dp"
-                style="@style/subTitleText"
                 android:fontFamily="@font/humyfriends"
-                android:text="우리집 등록 하기"/>
-        </LinearLayout>
-
-    </FrameLayout>
-
+                android:padding="5dp"
+                android:text="우리집 등록 하기"
+                android:textColor="@color/allbackg" />
+        </FrameLayout>
     </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="60">
+
         <ListView
             android:id="@+id/my_home_list"
             android:layout_width="match_parent"
@@ -205,3 +250,5 @@
 
     </ScrollView>
 </LinearLayout>
+
+
