날씨받기 안정화(된건지 안된건지 잘 모르겠음...)

--- a/app/src/main/res/layout/main_fragment1.xml
+++ b/app/src/main/res/layout/main_fragment1.xml
@@ -12,6 +12,10 @@
         android:id="@+id/hide_lon_msg"
         android:layout_width="0dp"
         android:layout_height="0dp" />
+    <TextView
+        android:id="@+id/hide_login_id"
+        android:layout_width="0dp"
+        android:layout_height="0dp" />
 
     <LinearLayout
         android:id="@+id/main_weather"
